onkelskrue/andeby/andeby-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: andeby-svc
  labels:
    app: andeby
spec:
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: andeby
