onkelskrue/andeby/andeby-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: default-ingress
spec:
  rules:
  - host: andeby.rocks
    http:
      paths:
      - path: /
        backend:
          serviceName: andeby-svc
          servicePort: 5000
